# benchy

./: Cargo.toml  main.rs
src/lib/: mandelbrot.rs
